[gd_scene load_steps=5 format=3 uid="uid://bdt8hkpnxs2nd"]

[ext_resource type="Texture2D" uid="uid://cpyq2bssb21e0" path="res://Graphics/Backgrounds/background_glacial_mountains.png" id="1_6dmpi"]
[ext_resource type="Script" path="res://Scenes/MainMenu/main_menu.gd" id="1_y1ahf"]
[ext_resource type="LabelSettings" uid="uid://766o1nox6n0c" path="res://Graphics/TitleLabelSettings.tres" id="3_rcpk3"]
[ext_resource type="PackedScene" uid="uid://dfmw6h4velbkk" path="res://Scenes/OptionsMenu/options_menu.tscn" id="4_thmtr"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y1ahf")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_6dmpi")
expand_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 76.0
offset_right = 256.105
offset_bottom = 180.0
alignment = 1

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "POLAR ATTACK"
label_settings = ExtResource("3_rcpk3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(1, 0, 0, 1)
text = "START GAME"

[node name="OptionsGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(1, 0, 0, 1)
text = "OPTIONS
"

[node name="ExitGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(1, 0, 0, 1)
text = "EXIT GAME"

[node name="OptionsMenu" parent="." instance=ExtResource("4_thmtr")]
visible = false
layout_mode = 1
